# autoglm-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/autoglm_mcp/: __init__.py  server.py
